docker-registry-ui/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  labels:
    name: docker-registry
spec:
  selector:
    matchLabels:
      name: docker-registry
  template:
    metadata:
      labels:
        name: docker-registry
    spec:
      containers:
      - image: quiq/registry-ui:0.12.0
        name: docker-registry
        command: ["sh"]
        args: ["-c", "sleep infinity"]
        # imagePullPolicy: Always
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
          limits:
            cpu: "100m"
            memory: "128M"
        ports:
        - containerPort: 8000
          name: web-ui
        # volumeMounts:
        # - mountPath: /opt/config.yml
        #   subPath: config.yml
        #   name: docker-ui-config
      volumes:
      - name: docker-ui-config
        configMap:
          name: docker-ui-config
