docker-registry-ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
spec:
  type: NodePort
  selector:
    name: docker-registry
  ports:
    - port: 80          # Port inside the cluster
      targetPort: 8000  # Port inside the container
      nodePort: 8000   # External port (optional)
      protocol: TCP
