docker-registry-ui/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry-ui
  annotations:
    cert-manager.io/cluster-issuer: issuer-infisical
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - docker.moody
      secretName: docker-registry-tls

  rules:
    - host: docker.moody
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 8000
